fix: scrollbar layout shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,7 @@ ul {
 body, html {
     overflow-x: hidden;
     color: #151515;
+    background-color: white;
     scroll-behavior: smooth;
 }
 
@@ -36,6 +37,8 @@ body, html {
 
 html.scroll-lock {
     overflow-y: hidden;
+    padding-right: 0.65vw;
+    background-color: #e3e3e3;
 }
 
 .d-none {
